# mutsuki

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: rust.yml
cfg-example/: config.json
cfg-example/client_certificate/: cert.pem  cert.pfx  priv.key
cfg-example/server_certificate/: cert.pem  priv.key
scripts/: gen_cn_adblock.sh
src/: common.rs  http.rs  main.rs  outbound.rs  rules.rs  socks5.rs
