[package]
name = "mutsuki"
version = "0.1.0"
authors = ["xty <xutianyi1999@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log4rs = "1"
log = "0.4"
hyper = { version = "0.14", features = ["full"] }
base64 = "0.13"
socket2 = "0.4"
tokio-rustls = "0.23"
futures-util = "0.3"
rustls-pemfile = "1"

[profile.release]
lto = true
codegen-units = 1
