[package]
name = "mutsuki"
version = "0.2.1"
authors = ["xty <xutianyi1999@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log4rs = "1"
log = "0.4"
hyper = { version = "1", features = ["client", "server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
base64 = "0.22"
socket2 = "0.5"
tokio-rustls = "0.26"
rustls-pemfile = "2"
sscanf = "0.4"
mimalloc = { version = "*", default-features = false }

[profile.release]
lto = true
codegen-units = 1
